[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
regex = { version = "1.5.4" }
itertools = { version = "0.10.3" }

[[bin]]
name = "day_1"
path = "day_1.rs"

[[bin]]
name = "day_2"
path = "day_2.rs"

[[bin]]
name = "day_3"
path = "day_3.rs"

[[bin]]
name = "day_4"
path = "day_4.rs"

[[bin]]
name = "day_5"
path = "day_5.rs"

[[bin]]
name = "day_6"
path = "day_6.rs"

[[bin]]
name = "day_7"
path = "day_7.rs"

[[bin]]
name = "day_8"
path = "day_8.rs"

[[bin]]
name = "day_9"
path = "day_9.rs"
