[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
regex = { version = "1.5.4" }
itertools = { version = "0.10.3" }
json = { version = "0.12.4" }

[[bin]]
name = "day_1"
path = "day_1.rs"

[[bin]]
name = "day_2"
path = "day_2.rs"

[[bin]]
name = "day_3"
path = "day_3.rs"

[[bin]]
name = "day_4"
path = "day_4.rs"

[[bin]]
name = "day_5"
path = "day_5.rs"

[[bin]]
name = "day_6"
path = "day_6.rs"

[[bin]]
name = "day_7"
path = "day_7.rs"

[[bin]]
name = "day_8"
path = "day_8.rs"

[[bin]]
name = "day_9"
path = "day_9.rs"

[[bin]]
name = "day_10"
path = "day_10.rs"

[[bin]]
name = "day_11"
path = "day_11.rs"

[[bin]]
name = "day_12"
path = "day_12.rs"

[[bin]]
name = "day_13"
path = "day_13.rs"

[[bin]]
name = "day_14"
path = "day_14.rs"

[[bin]]
name = "day_15"
path = "day_15.rs"

[[bin]]
name = "day_16"
path = "day_16.rs"

[[bin]]
name = "day_17"
path = "day_17.rs"

[[bin]]
name = "day_18"
path = "day_18.rs"

[[bin]]
name = "day_20"
path = "day_20.rs"
